--- a/pytorch-sm-bert-dist.ipynb
+++ b/pytorch-sm-bert-dist.ipynb
@@ -201,10 +201,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyperparameters={'epochs': 5,\n",
-    "                 'train_batch_size': 32,\n",
-    "                 'model_name':'distilbert-base-uncased'\n",
-    "                 }"
+    "hyperparameters={'epochs': 3,\n",
+    "                 'train_batch_size': 64,\n",
+    "                 'eval_batch_size': 64,\n",
+    "                 'model_name': 'distilbert-base-uncased'}"
    ]
   },
   {
@@ -228,9 +228,7 @@
     "    {\"Name\": \"train_loss\", \"Regex\": \"train_loss.*=\\D*(.*?)$\"},\n",
     "    {\"Name\": \"eval_accuracy\", \"Regex\": \"eval_accuracy.*=\\D*(.*?)$\"},\n",
     "    {\"Name\": \"eval_loss\", \"Regex\": \"eval_loss.*=\\D*(.*?)$\"},\n",
-    "    {\"Name\": \"f1\", \"Regex\": \"f1.*=\\D*(.*?)$\"},\n",
-    "    {\"Name\": \"exact_match\", \"Regex\": \"exact_match.*=\\D*(.*?)$\"}\n",
-    "]"
+    "    {\"Name\": \"f1\", \"Regex\": \"f1.*=\\D*(.*?)$\"}]"
    ]
   },
   {
