--- a/pytorch-sm-bert-model-parallel.ipynb
+++ b/pytorch-sm-bert-model-parallel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Using SageMaker: 2.59.5]\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'[Using SageMaker: {sagemaker.__version__}]')"
    ]
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +81,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36mtransformers\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m AutoModelForSequenceClassification, Trainer, TrainingArguments, AutoTokenizer\n",
+      "\u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36msklearn\u001b[39;49;00m\u001b[04m\u001b[36m.\u001b[39;49;00m\u001b[04m\u001b[36mmetrics\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m accuracy_score, precision_recall_fscore_support\n",
+      "\u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36mdatasets\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m load_from_disk\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36margparse\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mlogging\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mrandom\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorch\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36msys\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mos\u001b[39;49;00m\n",
+      "\n",
+      "\n",
+      "\u001b[34mif\u001b[39;49;00m \u001b[31m__name__\u001b[39;49;00m == \u001b[33m'\u001b[39;49;00m\u001b[33m__main__\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m:\n",
+      "    parser = argparse.ArgumentParser()\n",
+      "    \u001b[37m# Hyperparameters sent by the client are passed as command-line arguments to the script\u001b[39;49;00m\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--epochs\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m10\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--train_batch_size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m32\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--eval_batch_size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m32\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--warmup_steps\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m500\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--model_name\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--learning_rate\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=\u001b[34m5e-5\u001b[39;49;00m)\n",
+      "\n",
+      "    \u001b[37m# Data, model, and output directories\u001b[39;49;00m\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--output-data-dir\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=os.environ[\u001b[33m'\u001b[39;49;00m\u001b[33mSM_OUTPUT_DATA_DIR\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m])\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--model-dir\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=os.environ[\u001b[33m'\u001b[39;49;00m\u001b[33mSM_MODEL_DIR\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m])\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--n_gpus\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=os.environ[\u001b[33m'\u001b[39;49;00m\u001b[33mSM_NUM_GPUS\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m])\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--training_dir\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=os.environ[\u001b[33m'\u001b[39;49;00m\u001b[33mSM_CHANNEL_TRAIN\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m])\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--test_dir\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=os.environ[\u001b[33m'\u001b[39;49;00m\u001b[33mSM_CHANNEL_TEST\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m])\n",
+      "\n",
+      "    args, _ = parser.parse_known_args()\n",
+      "\n",
+      "    \u001b[37m# Set up logging\u001b[39;49;00m\n",
+      "    logger = logging.getLogger(\u001b[31m__name__\u001b[39;49;00m)\n",
+      "\n",
+      "    logging.basicConfig(\n",
+      "        level=logging.getLevelName(\u001b[33m'\u001b[39;49;00m\u001b[33mINFO\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m),\n",
+      "        handlers=[logging.StreamHandler(sys.stdout)],\n",
+      "        \u001b[36mformat\u001b[39;49;00m=\u001b[33m\"\u001b[39;49;00m\u001b[33m%(asctime)s\u001b[39;49;00m\u001b[33m - \u001b[39;49;00m\u001b[33m%(name)s\u001b[39;49;00m\u001b[33m - \u001b[39;49;00m\u001b[33m%(levelname)s\u001b[39;49;00m\u001b[33m - \u001b[39;49;00m\u001b[33m%(message)s\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m,\n",
+      "    )\n",
+      "\n",
+      "    \u001b[37m# Load train and test datasets\u001b[39;49;00m\n",
+      "    train_dataset = load_from_disk(args.training_dir, keep_in_memory=\u001b[34mTrue\u001b[39;49;00m)\n",
+      "    test_dataset = load_from_disk(args.test_dir, keep_in_memory=\u001b[34mTrue\u001b[39;49;00m)\n",
+      "\n",
+      "    logger.info(\u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m[Loaded train_dataset length is: \u001b[39;49;00m\u001b[33m{\u001b[39;49;00m\u001b[33mlen(train_dataset)}]\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "    logger.info(\u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m[Loaded test_dataset length is: \u001b[39;49;00m\u001b[33m{\u001b[39;49;00m\u001b[33mlen(test_dataset)}]\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "    \n",
+      "    \u001b[37m# Compute metrics function for binary classification\u001b[39;49;00m\n",
+      "    \u001b[34mdef\u001b[39;49;00m \u001b[32mcompute_metrics\u001b[39;49;00m(pred):\n",
+      "        labels = pred.label_ids\n",
+      "        preds = pred.predictions.argmax(-\u001b[34m1\u001b[39;49;00m)\n",
+      "        precision, recall, f1, _ = precision_recall_fscore_support(labels, preds, average=\u001b[33m'\u001b[39;49;00m\u001b[33mbinary\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "        acc = accuracy_score(labels, preds)\n",
+      "        \u001b[34mreturn\u001b[39;49;00m {\u001b[33m'\u001b[39;49;00m\u001b[33maccuracy\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m: acc, \u001b[33m'\u001b[39;49;00m\u001b[33mf1\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m: f1, \u001b[33m'\u001b[39;49;00m\u001b[33mprecision\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m: precision, \u001b[33m'\u001b[39;49;00m\u001b[33mrecall\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m: recall}\n",
+      "\n",
+      "    \u001b[37m# Download model from model hub\u001b[39;49;00m\n",
+      "    model = AutoModelForSequenceClassification.from_pretrained(args.model_name)\n",
+      "    tokenizer = AutoTokenizer.from_pretrained(args.model_name)\n",
+      "\n",
+      "    \u001b[37m# Define training args\u001b[39;49;00m\n",
+      "    training_args = TrainingArguments(\n",
+      "        output_dir=args.model_dir,\n",
+      "        num_train_epochs=args.epochs,\n",
+      "        per_device_train_batch_size=args.train_batch_size,\n",
+      "        per_device_eval_batch_size=args.eval_batch_size,\n",
+      "        warmup_steps=args.warmup_steps,\n",
+      "        evaluation_strategy=\u001b[33m'\u001b[39;49;00m\u001b[33mepoch\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m,\n",
+      "        logging_dir=\u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m{args.output_data_dir}\u001b[39;49;00m\u001b[33m/logs\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m,\n",
+      "        learning_rate=\u001b[36mfloat\u001b[39;49;00m(args.learning_rate),\n",
+      "    )\n",
+      "\n",
+      "    \u001b[37m# Create Trainer instance\u001b[39;49;00m\n",
+      "    trainer = Trainer(\n",
+      "        model=model,\n",
+      "        args=training_args,\n",
+      "        compute_metrics=compute_metrics,\n",
+      "        train_dataset=train_dataset,\n",
+      "        eval_dataset=test_dataset,\n",
+      "        tokenizer=tokenizer\n",
+      "    )\n",
+      "\n",
+      "    \u001b[37m# Train model\u001b[39;49;00m\n",
+      "    trainer.train()\n",
+      "\n",
+      "    \u001b[37m# Evaluate model\u001b[39;49;00m\n",
+      "    eval_result = trainer.evaluate(eval_dataset=test_dataset)\n",
+      "\n",
+      "    \u001b[37m# Write evaluation results to a file which can be accessed later in S3 output\u001b[39;49;00m\n",
+      "    \u001b[34mwith\u001b[39;49;00m \u001b[36mopen\u001b[39;49;00m(os.path.join(args.output_data_dir, \u001b[33m'\u001b[39;49;00m\u001b[33meval_results.txt\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m), \u001b[33m'\u001b[39;49;00m\u001b[33mw\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m) \u001b[34mas\u001b[39;49;00m writer:\n",
+      "        \u001b[34mfor\u001b[39;49;00m key, value \u001b[35min\u001b[39;49;00m \u001b[36msorted\u001b[39;49;00m(eval_result.items()):\n",
+      "            writer.write(\u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m{key}\u001b[39;49;00m\u001b[33m = \u001b[39;49;00m\u001b[33m{value}\u001b[39;49;00m\u001b[33m\\n\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "\n",
+      "    \u001b[37m# Save model to S3\u001b[39;49;00m\n",
+      "    trainer.save_model(args.model_dir)\n"
+     ]
+    }
+   ],
    "source": [
     "!pygmentize ./src/train.py"
    ]
@@ -89,15 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyperparameters={'epochs': 10,\n",
-    "                 'train_batch_size': 32,\n",
-    "                 'eval_batch_size': 32,\n",
-    "                 'model_name':'roberta-large'\n",
-    "                 }"
+    "hyperparameters={'epochs': 3,\n",
+    "                 'train_batch_size': 64,\n",
+    "                 'eval_batch_size': 64,\n",
+    "                 'model_name': 'distilbert-base-uncased'}"
    ]
   },
   {
@@ -109,23 +216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "mpi_options = {\n",
     "    \"enabled\" : True,\n",
-    "    \"processes_per_host\" : 8,\n",
+    "    \"processes_per_host\" : 8\n",
     "}\n",
     "\n",
     "smp_options = {\n",
-    "    \"enabled\":True,\n",
+    "    \"enabled\": True,\n",
     "    \"parameters\": {\n",
-    "        \"microbatches\": 4,\n",
-    "        \"placement_strategy\": \"spread\",\n",
+    "        \"microbatches\": 16,\n",
+    "        \"placement_strategy\": \"cluster\",\n",
     "        \"pipeline\": \"interleaved\",\n",
     "        \"optimize\": \"speed\",\n",
-    "        \"partitions\": 4,\n",
+    "        \"partitions\": 2,\n",
     "        \"ddp\": True,\n",
     "    }\n",
     "}\n",
@@ -145,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,9 +264,7 @@
     "    {\"Name\": \"train_loss\", \"Regex\": \"train_loss.*=\\D*(.*?)$\"},\n",
     "    {\"Name\": \"eval_accuracy\", \"Regex\": \"eval_accuracy.*=\\D*(.*?)$\"},\n",
     "    {\"Name\": \"eval_loss\", \"Regex\": \"eval_loss.*=\\D*(.*?)$\"},\n",
-    "    {\"Name\": \"f1\", \"Regex\": \"f1.*=\\D*(.*?)$\"},\n",
-    "    {\"Name\": \"exact_match\", \"Regex\": \"exact_match.*=\\D*(.*?)$\"}\n",
-    "]"
+    "    {\"Name\": \"f1\", \"Regex\": \"f1.*=\\D*(.*?)$\"}]"
    ]
   },
   {
@@ -171,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,19 +321,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_input_path = f's3://{bucket}/tweets/train'\n",
-    "test_input_path = f's3://{bucket}/tweets/test'"
+    "training_input_path = f's3://{bucket}/imdb/train'\n",
+    "test_input_path = f's3://{bucket}/imdb/test'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2021-10-14 18:50:26 Starting - Starting the training job\n",
+      "2021-10-14 18:50:30 Starting - Launching requested ML instances....................\n",
+      "2021-10-14 18:52:17 Starting - Preparing the instances for training.................................\n",
+      "2021-10-14 18:55:05 Downloading - Downloading input data...\n",
+      "2021-10-14 18:55:24 Training - Downloading the training image............\n",
+      "2021-10-14 18:56:28 Training - Training image download completed. Training in progress............................................................\n",
+      "2021-10-14 19:01:34 Uploading - Uploading generated training model........\n",
+      "2021-10-14 19:02:20 Completed - Training job completed\n",
+      "CPU times: user 675 ms, sys: 56.1 ms, total: 731 ms\n",
+      "Wall time: 11min 54s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -244,18 +367,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "S3 uri where the trained model is located: s3://sagemaker-us-east-1-119174016168/huggingface-pytorch-training-2021-10-14-18-50-26-037/output/model.tar.gz\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'S3 uri where the trained model is located: {huggingface_estimator.model_data}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Latest training job name for this estimator: huggingface-pytorch-training-2021-10-14-18-50-26-037\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'Latest training job name for this estimator: {huggingface_estimator.latest_training_job.name}')"
    ]
@@ -271,7 +410,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------"
+     ]
+    }
+   ],
    "source": [
     "predictor = huggingface_estimator.deploy(1, 'ml.g4dn.xlarge')"
    ]
