--- a/explore-and-prep-data.ipynb
+++ b/explore-and-prep-data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,20 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Using SageMaker: 2.44.0]\n",
-      "[Using Transformers: 4.6.1]\n",
-      "[Using Datasets: 1.6.2]\n",
-      "[Using Torch: 1.6.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logger.info(f'[Using SageMaker: {sagemaker.__version__}]')\n",
     "logger.info(f'[Using Transformers: {transformers.__version__}]')\n",
@@ -125,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,19 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Default Bucket = sagemaker-us-east-1-119174016168\n",
-      "Sagemaker Role ARN =arn:aws:iam::119174016168:role/service-role/AmazonSageMaker-ExecutionRole-20211013T112826\n",
-      "Sagemaker Session Region = us-east-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logger.info(f'Default Bucket = {bucket}')\n",
     "logger.info(f'Sagemaker Role ARN ={role}')\n",
@@ -165,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,85 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>@player112345 Good Morrow! How are you this fair morn?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Aaron just left to swap out the fridge in his mother's condo. He'll be hauling two fridges up/down 2 flights of stairs. With no help.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>#ahbl princess jared almost ready for his closeup</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>@paigeebaby awwww  come see it with me and ill watch it for you haha so ill see it twice</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>@ETown_Lesley OMG I KNOW! I just can't get over all the children. 8 of them. Will be so complicated... so sad</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   label  \\\n",
-       "0      1   \n",
-       "1      0   \n",
-       "2      1   \n",
-       "3      0   \n",
-       "4      0   \n",
-       "\n",
-       "                                                                                                                                     text  \n",
-       "0                                                                                 @player112345 Good Morrow! How are you this fair morn?   \n",
-       "1  Aaron just left to swap out the fridge in his mother's condo. He'll be hauling two fridges up/down 2 flights of stairs. With no help.   \n",
-       "2                                                                                      #ahbl princess jared almost ready for his closeup   \n",
-       "3                                                @paigeebaby awwww  come see it with me and ill watch it for you haha so ill see it twice  \n",
-       "4                          @ETown_Lesley OMG I KNOW! I just can't get over all the children. 8 of them. Will be so complicated... so sad   "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_df = pd.read_csv('./data/train.csv')\n",
     "train_df.head(5)"
@@ -260,40 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(990000, 2)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 2)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_df = pd.read_csv('./data/test.csv')\n",
     "test_df.shape"
@@ -301,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,36 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset = train_dataset.map(tokenize, batched=True, batch_size=1000, num_proc=10)\n",
     "test_dataset = test_dataset.map(tokenize, batched=True, batch_size=1000, num_proc=10)"
@@ -374,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,43 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['attention_mask', 'input_ids', 'label', 'text'],\n",
-       "    num_rows: 990000\n",
-       "})"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datasets.arrow_dataset.Dataset"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(train_dataset)"
    ]
@@ -434,14 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_input_path = f's3://{bucket}/tweets/train'\n",
+    "training_input_path = f's3://{bucket}/imdb/train'\n",
     "train_dataset.save_to_disk(training_input_path,fs=s3)\n",
     "\n",
-    "test_input_path = f's3://{bucket}/tweets/test'\n",
+    "test_input_path = f's3://{bucket}/imdb/test'\n",
     "test_dataset.save_to_disk(test_input_path,fs=s3)"
    ]
   },
